testsuite/resolution/compile-fail/missing-method-body.verona
// Copyright (c) Microsoft Corporation. All rights reserved.
// Licensed under the MIT License.
// Only interfaces are allowed to have body-less methods.
class Test {
  // CHECK-L: missing-method-body.verona:${LINE:+1}:3: error: Method 'foo' in class 'Test' must have a body
  foo();
}
